--- a/Rest-Framework/3.rest_framework_setup.md
+++ b/Rest-Framework/3.rest_framework_setup.md
@@ -9,8 +9,17 @@
     ]
 
 <!-- rest framework built in authenitcation panel -->
+
+```python
+	from rest_framework.authtoken import views
+```
+
 3.  urlpatterns = [
-        path('api-auth/', include('rest_framework.urls'))
+        path('api-auth/', include('rest_framework.urls')),
+        <!-- need this url for DRF browsable API -->
+        
+        path('api-token-auth/', views.obtain_auth_token)
+        <!-- for obtain token from drf builtin view -->
     ]
 
 4.  REST_FRAMEWORK = {
